# WordleGame

./: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
Back/: test.db
Back/WordleBack/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.db
Back/WordleBack/src/: database.py  main.py
Back/WordleBack/src/auth/: dependencies.py  models.py  router.py  schemas.py  utils.py
Back/WordleBack/src/game/: OptionalOAuth2.py  models.py  router.py  schemas.py  utils.py
Back/WordleBack/src/score/: router.py
Back/src/: database.py  main.py
Back/src/auth/: utils.py
Back/src/game/: models.py  router.py  schemas.py  utils.py
Back/src/score/: router.py
Front/: package-lock.json  package.json
Front/src/: App.vue  main.ts
Front/src/api/: auth.ts
Front/src/router/: index.ts
Front/src/views/: GameView.vue  LoginView.vue  ProfileView.vue  TopPlayersView.vue
WordleGame-WorkManOne-vuejs-version/: package-lock.json
WordleGame-WorkManOne-vuejs-version/.github/workflows/: main.yml
WordleGame-WorkManOne-vuejs-version/src/: App.vue
WordleGame-WorkManOne-vuejs-version/src/api/: auth.ts
WordleGame-WorkManOne-vuejs-version/src/router/: index.ts
WordleGame-WorkManOne-vuejs-version/src/views/: GameView.vue  LoginView.vue  ProfileView.vue
public/: index.html  login.html  style.css
src/: App.vue  index.ts  ruwords.d.ts
src/views/: GameView.vue  LoginView.vue  ProfileView.vue  TopPlayersView.vue
