[tool.poetry]
name = "wordleback"
version = "0.1.0"
description = ""
authors = ["Tiris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.21.1 "
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
passlib = "^1.7.4"
bcrypt = "3.2.0"
pyjwt = "^2.9.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
